# swc

./: .bumpversion.cfg  .gitignore  LICENSE.txt  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
docs/: contributing.md
src/: __main__.py  __version__.py  nsrdb.py
swc/: README.md  __init__.py  __version__.py  cli.py  context.py  datetime_converter.py  log.py  nsrdb.py  nsrdb_cli.py  sam.py  sam_online.py  sam_simulation.py  sam_simulation_cli.py  solar.py  sscapi.py  utils.py
