[tool.poetry]
name = "swc"
version = "0.6.1"
description = "Solar PV performance simulator"
authors = ["pesap <pesapsanchez@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^1.0.5"
requests = "^2.24.0"
tqdm = "^4.46.1"
click = "^7.1.2"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.1"
wheel = "^0.34.2"
twine = "^3.2.0"
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
