# This example contains just the necessary options for a src-layout, set up
# the rest of the file as described above.
[metadata]
name = swc
version = 0.7.2
author = P. A. Sanchez-Perez
author_email = pesapsanchez@gmal.com
description = Solar performance calculator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pesap/swc
project_urls =
    Bug Tracker = https://github.com/pesap/swc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find:
include_package_data = True
install_requires =
    pandas
    requests
    tqdm
    click
    python-dotenv

[options.extras_require]
dev = 
    twine
    ipython
    bump2version

[options.data_files]
compilers = 
    swc/ssc.dll
    swc/libssc.dylib 
    swc/libssc.so 
